--- a/frontend-exodus/package.json
+++ b/frontend-exodus/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.8",
     "firebase": "^11.6.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
